quizapi.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: quiz-api
spec:
  replicas: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        name: quiz-api
        app: quizapi
    spec:
      containers:
      - name: education-app
        image: gcr.io/{gcp project-id}/{app_name:TAG}
        resources:
          requests:
            cpu: 125m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        imagePullPolicy: Always
        ports:
        - name: quiz-test-api
          containerPort: 8000
          protocol: TCP

---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "quiz-api-service"
  namespace: "default"
  labels:
    app: "quizapi"
    name: "quiz-api"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8000
  selector:
    app: "quizapi"
    name: "quiz-api"
  type: "ClusterIP"
