quizapi-ingress.yml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: quizapi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  backend:
    serviceName: quiz-api-service
    servicePort: 80
